2002-07-27  Mark McLoughlin  <mark@skynet.ie>

	Add support for rendering the wallpaper on
	a particular physical screen.

	* applier.[ch]:
	(bg_applier_init): init screen and root_window.
	(bg_applier_class_init), (bg_applier_set_prop),
	(bg_applier_get_prop): add "screen" property.
	(bg_applier_new_for_screen): implement.
	(render_wallpaper), (render_to_screen),
	(create_pixmap), (wallpaper_full_cover_p): use the
	screen and root window information.
	(make_root_pixmap): add a GdkScreen arg, actually
	use the display we opened, use the correct root
	window and not the default one
	(set_root_pixmap): add a GdkScreen arg, use the
	default display, use the correct root window.

2002-06-18  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=85224
	* applier.c (render_wallpaper) : clamp to avoid underflow

2002-06-17  Jody Goldberg <jody@gnome.org>

	* Release 2.0.0

2002-05-31  Damon Chaplin  <damon@ximian.com>

	* applier.c (bg_applier_apply_prefs): don't call set_root_pixmap() at
	all if nautilus is running. It didn't do anything in this case anyway.
	Removed the nice(20). A library function shouldn't do this. If
	gnome-settings-daemon wants to be niced then it should do it in main()
	or something like that.
	(set_root_pixmap): do a final check to see if nautilus is running
	before setting the pixmap.

	Fixes part of #74311.

2002-05-21  jacob berkman  <jacob@ximian.com>

	* applier.c (render_to_screen): use a gc for the pixmap not the
	root window
	(bg_applier_get_preview_widget): don't create the pixmap until we
	are realized
	(make_root_pixmap): use gdk_get_display(), not getenv ("DISPLAY"),
	and set the colormap for our GdkPixmap so we can draw on it
	(preview_realized_cb): create the pixmap here, and set it on our
	GtkImage

	fixes #73496

2002-05-16  jacob berkman  <jacob@ximian.com>

	* applier.c (bg_applier_apply_prefs): don't spew a warning when
	files can't be loaded (helps fix #76993)

2002-04-19  Jody Goldberg <jody@gnome.org>
